# ACE

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: continuous_integration.yaml
ace/: __init__.py  brain.py  config.py  net.py  skills.py  utils.py
ace/ai/: data.py  models.py
brain/: agent.py  database.py  input.py  output.py
brain/ai/: __init__.py  datasets.py  models.py
brain/text/: __init__.py  preprocessing.py
config/: ai.toml
config/intents/: base_config.cfg  config.cfg
core/: __init__.py  actions.py  adapters.py  constants.py  database.py  events.py  llm.py  model.py  models.py  presenter.py  presenters.py  protocols.py  services.py  tools.py  view.py  views.py
core/adapters/: __init__.py  http.py  io.py  protocols.py  services.py  storage.py  views.py
core/models/: __init__.py  base.py  gemini.py  protocols.py
core/presenters/: __init__.py  console.py  protocols.py
core/services/: __init__.py  database.py  location.py  protocols.py  weather.py
core/tools/: __init__.py  entertainment_tools.py  games.py  protocols.py  registry.py  system.py  system_tools.py  temporal_tools.py  text.py  weather.py  web_tools.py
core/views/: __init__.py  console.py  protocols.py
data/: ACECorpus.json  PERSONA.md  intents.json
data/intents/: UK_EN_PA_Intents_20240129.csv  dev.spacy  train.spacy
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md
tests/: __init__.py  test_ace.py  test_actions.py  test_adapters.py  test_agent.py  test_brain.py  test_database.py  test_events.py  test_llm.py  test_model.py  test_models.py  test_net.py  test_presenter.py  test_presenters.py  test_services.py  test_skills.py  test_text.py  test_tools.py  test_view.py  test_views.py
tests/adapters/: __init__.py  test_http.py  test_io.py  test_services.py  test_storage.py  test_views.py
tests/ai/: test_dataset.py  (+1 more)
(+47 files in other folders)
