[tool.poetry]
name = "ACE"
version = "0.3.0"
description = "ACE, the Artificial Consciousness Engine, is a digital assistant. It is designed to help you with your daily tasks and keep you in the loop with your life and the world."
authors = ["Illy Shaieb <shaiebilly+ace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.5"
requests = "^2.31.0"
freezegun = "^1.2.1"
cachetools = "^5.2.0"
toml = "^0.10.2"
spacy = "^3.4.2"
tqdm = "^4.64.1"
pandas = "^1.5.1"
todoist-api-python = "^2.0.2"
pyttsx3 = "^2.90"
typer = { extras = ["all"], version = "^0.7.0" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
