[project]
name = "ace"
version = "2024.12.0"
description = "Artificial Consciousness Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "ctkmessagebox>=2.7",
    "customtkinter>=5.2.2",
    "google-genai>=1.49.0",
    "markdown>=3.10",
    "pillow>=12.0.0",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "transformers>=4.57.1",
]
