[project]
name = "ace"
version = "2024.12.0"
description = "Artificial Consciousness Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "ctkmessagebox>=2.7",
    "customtkinter>=5.2.2",
    "ddgs>=9.9.0",
    "google-genai>=1.49.0",
    "markdown>=3.10",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "pip>=25.3",
    "pylatexenc>=2.10",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "rich>=14.2.0",
    "transformers>=4.57.1",
]
